--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
   "name": "electron-template",
   "version": "1.0.0",
-  "description": "electron-react-webpack",
+  "description": "electron-react-redux-webpack-electron",
   "main": "main.js",
   "productName": "Electron-react-webpack",
   "homepage": "./",
-  "repository": "https://github.com/rio1228/electron-react-redux-webpack.git",
+  "repository": "https://github.com/rio1228/react-express-mysql-express.git",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "electron .",
     "build": "webpack",
     "build-w": "webpack --watch",
@@ -33,7 +32,6 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.6",
-    "react-scripts": "^1.0.11",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "superagent": "^3.5.2",
