--- a/package.json
+++ b/package.json
@@ -11,10 +11,18 @@
     "build": "webpack",
     "build-w": "webpack --watch",
     "component": "asar pack ./out ./project.asar",
-    "all-package": "webpack && asar pack ./out ./project.asar && electron-packager . electron-template --platform=win32 --arc=x64 --prune=true  --out=release-builds",
-    "all-repackage": "webpack && asar pack ./out ./project.asar && electron-packager . electron-template --platform=win32 --arc=x64 --prune=true  --out=release-builds --overwrite",
-    "package": "electron-packager ./ electron-template --platform=win32 --arch=x64 --prune=true  --out=release-builds",
-    "repackage": "electron-packager . electron-template --platform=win32 --arc=x64 --prune=true  --out=release-builds --overwrite"
+    "package-win": "electron-packager ./ electron-template --platform=win32 --arch=x64 --prune=true  --out=release-builds",
+    "package-mac": "electron-packager ./ electron-template --platform=win32 --arch=x64 --prune=true  --out=release-builds",
+    "package-win-mac": "electron-packager ./ electron-template --platform=win32,darwin --arch=x64 --prune=true  --out=release-builds",
+    "repackage-win": "electron-packager . electron-template --platform=win32 --arc=x64 --prune=true  --out=release-builds --overwrite",
+    "repackage-mac": "electron-packager . electron-template --platform=win32 --arc=x64 --prune=true  --out=release-builds --overwrite",
+    "repackage-win-mac": "electron-packager . electron-template --platform=win32,darwin --arc=x64 --prune=true  --out=release-builds --overwrite",
+    "all-package-win": "webpack && asar pack ./out ./project.asar && electron-packager . electron-template --platform=win32 --arc=x64 --prune=true  --out=release-builds",
+    "all-package-mac": "webpack && asar pack ./out ./project.asar && electron-packager . electron-template --platform=darwin --arc=x64 --prune=true  --out=release-builds",
+    "all-package-win-mac": "webpack && asar pack ./out ./project.asar && electron-packager . electron-template --platform=win32,darwin --arc=x64 --prune=true  --out=release-builds",
+    "all-repackage-win": "webpack && asar pack ./out ./project.asar && electron-packager . electron-template --platform=win32 --arc=x64 --prune=true  --out=release-builds --overwrite",
+    "all-repackage-mac": "webpack && asar pack ./out ./project.asar && electron-packager . electron-template --platform=darwin --arc=x64 --prune=true  --out=release-builds --overwrite",
+    "all-repackage-win-mac": "webpack && asar pack ./out ./project.asar && electron-packager . electron-template --platform=win32,darwin --arc=x64 --prune=true  --out=release-builds --overwrite"
   },
   "keywords": [],
   "author": "Ryo Mikami",
