--- a/package.json
+++ b/package.json
@@ -5,24 +5,23 @@
   "main": "main.js",
   "productName": "Electron-react-webpack",
   "homepage": "./",
-  "repository": "https://github.com/rio1228/react-express-mysql-express.git",
+  "repository": "https://github.com/rio1228/react-express-mysql-electron.git",
   "scripts": {
     "start": "electron .",
     "build": "webpack",
     "build-w": "webpack --watch",
-    "component": "asar pack ./out ./project.asar",
     "package-win": "electron-packager ./ electron-template --platform=win32 --arch=x64 --prune=true  --out=release-builds",
     "package-mac": "electron-packager ./ electron-template --platform=win32 --arch=x64 --prune=true  --out=release-builds",
     "package-win-mac": "electron-packager ./ electron-template --platform=win32,darwin --arch=x64 --prune=true  --out=release-builds",
     "repackage-win": "electron-packager . electron-template --platform=win32 --arch=x64 --prune=true  --out=release-builds --overwrite",
     "repackage-mac": "electron-packager . electron-template --platform=darwin --arch=x64 --prune=true  --out=release-builds --overwrite",
     "repackage-win-mac": "electron-packager . electron-template --platform=win32,darwin --arch=x64 --prune=true  --out=release-builds --overwrite",
-    "all-package-win": "webpack && asar pack ./out ./project.asar && electron-packager . electron-template --platform=win32 --arch=x64 --prune=true  --out=release-builds",
-    "all-package-mac": "webpack && asar pack ./out ./project.asar && electron-packager . electron-template --platform=darwin --arch=x64 --prune=true  --out=release-builds",
-    "all-package-win-mac": "webpack && asar pack ./out ./project.asar && electron-packager . electron-template --platform=win32,darwin --arch=x64 --prune=true  --out=release-builds",
-    "all-repackage-win": "webpack && asar pack ./out ./project.asar && electron-packager . electron-template --platform=win32 --arch=x64 --prune=true  --out=release-builds --overwrite",
-    "all-repackage-mac": "webpack && asar pack ./out ./project.asar && electron-packager . electron-template --platform=darwin --arch=x64 --prune=true  --out=release-builds --overwrite",
-    "all-repackage-win-mac": "webpack && asar pack ./out ./project.asar && electron-packager . electron-template --platform=win32,darwin --arch=x64 --prune=true  --out=release-builds --overwrite"
+    "all-package-win": "webpack && electron-packager . electron-template --platform=win32 --arch=x64 --prune=true  --out=release-builds",
+    "all-package-mac": "webpack && electron-packager . electron-template --platform=darwin --arch=x64 --prune=true  --out=release-builds",
+    "all-package-win-mac": "webpack && electron-packager . electron-template --platform=win32,darwin --arch=x64 --prune=true  --out=release-builds",
+    "all-repackage-win": "webpack && electron-packager . electron-template --platform=win32 --arch=x64 --prune=true  --out=release-builds --overwrite",
+    "all-repackage-mac": "webpack && electron-packager . electron-template --platform=darwin --arch=x64 --prune=true  --out=release-builds --overwrite",
+    "all-repackage-win-mac": "webpack && electron-packager . electron-template --platform=win32,darwin --arch=x64 --prune=true  --out=release-builds --overwrite"
   },
   "keywords": [],
   "author": "Ryo Mikami",
