--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build": "webpack",
     "build-w": "webpack --watch",
     "package-win": "electron-packager ./ electron-template --platform=win32 --arch=x64 --prune=true  --out=release-builds",
-    "package-mac": "electron-packager ./ electron-template --platform=win32 --arch=x64 --prune=true  --out=release-builds",
+    "package-mac": "electron-packager ./ electron-template --platform=darwin --arch=x64 --prune=true  --out=release-builds",
     "package-win-mac": "electron-packager ./ electron-template --platform=win32,darwin --arch=x64 --prune=true  --out=release-builds",
     "repackage-win": "electron-packager . electron-template --platform=win32 --arch=x64 --prune=true  --out=release-builds --overwrite",
     "repackage-mac": "electron-packager . electron-template --platform=darwin --arch=x64 --prune=true  --out=release-builds --overwrite",
@@ -45,6 +45,7 @@
     "webpack": "^3.5.2"
   },
   "devDependencies": {
+    "electron-packager": "^8.7.2",
     "webpack-dev-server": "^2.7.1"
   }
 }
